# TNgine

./: CMakeLists.txt  CMakeSettings.json  README.md
Application/: Application.cpp  Application.h  CMakeLists.txt  EntryPoint.cpp
Assets/: CMakeLists.txt
Backends/Vulkan/: CMakeLists.txt  VulkanBaseCode.cpp  VulkanBaseCode.h
Content/Assets/Models/: cali.fbx
Core/: CMakeLists.txt  PrimitivesTypes.h  TMath.h  define.h  include.h
Core/Containers/: DynArray.hpp  HashMap.hpp
Core/Events/: EventBus.hpp  EventQueue.hpp  Events.h
Core/IDEHelper/: DynArray.natvis  HashMap.natvis
Core/Logging/: Logging.cpp  Logging.h
Core/Math/: Matrix.hpp  Transform.hpp  Vector.hpp
Core/Memory/: AllocatorTracker.hpp  LinearAllocator.hpp  PoolAllocator.hpp  StackAllocator.hpp
Core/Threads/: Atomic.h  ConditionVariable.cpp  ConditionVariable.h  Future.h  JobSystem.cpp  JobSystem.h  Lockguard.hpp  Mutex.cpp  Mutex.h  Semaphore.cpp  Semaphore.h  Spinlock.cpp  Spinlock.h  Task.h  Thread.cpp  Thread.h  ThreadEvent.cpp  ThreadEvent.h  ThreadPool.cpp  ThreadPool.h  ThreadUtils.hpp
Core/UUID/: UUID.cpp  UUID.h
Core/Utils/: ProfileScope.hpp  Utils.hpp
Platform/: CMakeLists.txt
Platform/FileSystem/: File.cpp  File.h  FileHandle.cpp  FileHandle.h  IFileWatcher.h  Path.cpp  Path.h  VirtualFileSystem.cpp  VirtualFileSystem.h
Platform/FileSystem/FileHandle/: DiskHandle.cpp  DiskHandle.h  MemoryHandle.cpp  MemoryHandle.h
Platform/FileSystem/FileProvider/: DiskFileProvider.cpp  DiskFileProvider.h  IVirtualFileProvider.h  MemoryFileProvider.cpp  MemoryFileProvider.h
Platform/FileWatcher/: FileWatcher.cpp  FileWatcher.h  LinFileWatcher.cpp  LinFileWatcher.h  MacFileWatcher.cpp  MacFileWatcher.h  WinFileWatcher.cpp  WinFileWatcher.h
Platform/Input/: Input.cpp  Input.h  KeyCode.h
Platform/Window/: IWindow.h  WindowCreateInfo.h  WindowFactory.hpp
Platform/Window/GLFW/: GLFWWindow.cpp  GLFWWindow.h
RHI/: CMakeLists.txt  RHIEnums.h  RHIFormats.h  RHIFromats.h  RHIResource.h  RHITypes.h
RHI/Commands/: RHICommandAllocator.h  RHICommandList.h  RHICommandQueue.h
RHI/Core/: RHIAdapter.h  RHICapabilities.h  RHIContext.h  RHIDevice.h
RHI/Pipeline/: RHIDescriptorLayout.h  RHIDescriptorSet.h  RHIPipeline.h  RHIPipelineLayout.h  RHIRenderPass.h
RHI/Resources/: RHIBuffer.h  RHISampler.h  RHIShader.h  RHITexture.h
RHI/Swapchain/: RHISwapchain.h
RHI/Sync/: RHIBarrier.h  RHIFence.h  RHISemaphore.h
Render/: CMakeLists.txt
Scene/: CMakeLists.txt
cmake/: CompilerWarnings.cmake  Dependencies.cmake  ModuleIncludes.cmake  Options.cmake  ShaderCompilation.cmake
